--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -38,49 +38,43 @@
   text-align: center;
   margin-left: 4%;
 }
-
-.product-price {
-  font-size: 1.5em;
-  color: black;
-  margin-bottom: 20px;
-}
-
-.add-to-cart-button {
-  font-size: 1em;
-  padding: 10px 20px;
-  background-color: black;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  border-radius: 5px;
-}
-
-.add-to-cart-button:hover {
-  background-color: grey;
-}
-
 .product-carousel {
-  width: 60%; /* Ρυθμίστε το ποσοστό σύμφωνα με τις ανάγκες σας */
-  margin-right: 5%;
-  margin-top: 5%;
-  margin-left: 10%; 
-  height: 20%;/* Ρυθμίστε την απόσταση από το δεξί σύμφωνα με τις ανάγκες σας */
+  max-width: 600px;
+  margin: 20px auto;
+  overflow: hidden;
+  border-radius: 20px; /* Αυξήστε το radius για πιο στρογγυλεμένες γωνίες */
+  box-shadow: 0px 10px 20px rgba(0,0,0,0.2); /* Μεγαλύτερη και πιο απαλή σκίαση για βάθος */
+  border: 1px solid #ddd; /* Προσθήκη λεπτής γραμμής για διακριτική περίγραμμα */
 }
-.carousel .slide {
-  background: none;
-  border: none;
+.product-carousel img {
+  width: 100%;
  
+  object-fit: cover;
+  transition: transform 0.5s ease; /* Προσθήκη απαλής μετάβασης για το zoom */
+}
+
+.product-carousel img:hover {
+  transform: scale(1.05); /* Ελαφρύ zoom κατά τη διάρκεια του hover */
+}
+.carousel .thumbs {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center; /* Κεντραρισμός των thumbnails */
 }
 
 .carousel .thumb {
-  border: none;
+  margin: 5px;
+  border: 2px solid #ddd; /* Διακριτικό περίγραμμα για κάθε thumbnail */
+  border-radius: 10px; /* Στρογγυλεμένες γωνίες */
+  transition: transform 0.3s ease, border-color 0.3s ease;
 }
 
-.carousel .control-arrow {
-  filter: invert(100%);
+.carousel .thumb.selected, .carousel .thumb:hover {
+  
+  transform: scale(1.1); /* Ελαφρύ zoom */
 }
-
 .how-to-use-container {
   display: flex;
   justify-content: space-between;
@@ -88,7 +82,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-  margin-top: 5%;
+  margin-top: 10%;
   margin-left: 20%;
   width: 1300px;
   height: 80%;
@@ -166,60 +160,7 @@
 }
 
 
-.flip-card {
-  background-color: transparent;
-  width: 100%;
-  max-width: 300px;
-  height: 200px;
-  perspective: 1000px;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
-/* Προσθήκη εφέ όταν ο χρήστης περνάει το ποντίκι πάνω από την κάρτα */
-.flip-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.flip-card.flipped .flip-card-inner {
-  transform: rotateY(180deg);
-}
 
 
 
@@ -288,8 +229,6 @@
     display: block;
   }
 
-  .flip-card {
-    width: 50%;
-  }
+  
 }
 
