--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -11,32 +11,10 @@
   grid-column: 1;
 }
 
-.product-details {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  background-color: white;
-  border-radius: 5px;
-  
-  height: 50%;
-  width: 70%;
-  margin-top: 10%;
-}
-
-.product-details h1 {
-  font-size: 2em;
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.product-description {
-  font-size: 1em;
-  color: #666;
-  margin-bottom: 20px;
-  text-align: center;
-  margin-left: 4%;
+.add-to-cart-button{
+  background-color: black;
+  border: none;
+  width: 41%;
 }
 .product-carousel {
   max-width: 600px;
@@ -48,8 +26,7 @@
 }
 .product-carousel img {
   width: 100%;
- 
-  object-fit: cover;
+  /* height: 40%; */
   transition: transform 0.5s ease; /* Προσθήκη απαλής μετάβασης για το zoom */
 }
 
@@ -99,6 +76,7 @@
 .image-container {
   flex: 1;
   display: flex;
+  width: 100%;
 }
 
 .image-container img {
@@ -217,6 +195,10 @@
   .how-to-use-content, .image-container {
     flex: 1;
     width: 100%;
+  }
+
+  .how-to-use-container{
+    margin-bottom: 5%;
   }
 
   .image-container img {
