--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -1,12 +1,14 @@
 .product-container {
   max-width: 1200px;
   margin: 20px auto;
+
 }
 .product-container .carousel img {
   width: 100%;
-  height: 800px;  
+  height: 800px;
   object-fit: cover;  
-  object-position: center;  
+  object-position: center; 
+
 }
 
 .product-container .carousel .control-dots .dot {
@@ -25,21 +27,33 @@
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-margin-right: 2px;
-font-weight:bold ;
+  margin-left: 25%;
+font-weight:bold;
 }
 
 .read-more-button:hover {
-  color: #0056b3; /* Darker blue when hovered */
+  color: #333 !important; /* Darker blue when hovered */
   text-decoration: underline;
 }
 
 .product-details h1,
 .product-details h3,
-.product-details .product-description
+.product-details 
  {
   text-align: left; /* Αριστερή στοίχιση, διαθέσιμες επιλογές: left, right, center, justify */
 
+}
+.product-description{
+  text-align: left;
+
+}
+
+.product-price{
+  font-size: 1.2em;
+  margin-left: 45%;
+  
+  margin-top: 1%;
+  margin-bottom: 0.5%;
 }
 .add-to-cart-button{
   background-color: black;
@@ -47,13 +61,20 @@ font-weight:bold ;
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 5px;
-  width: 41%;
+  margin-bottom: 10px;
+  width: 40%;
   font-size: 16px;
   transition: background-color 0.3s;
+  margin-left: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
 }
 
 .add-to-cart-button:hover {
-  background-color: #fbf9ed; /* Darker green when hovered */
+  background-color: rgba(31, 30, 30, 0.284) !important; 
 }
 
 
@@ -102,11 +123,6 @@ font-weight:bold ;
    
 }
 
-/* Στυλ για τα ενεργά και hover tabs */
-/* .ant-tabs-tab.ant-tabs-tab-active .ant-tabs-tab-btn {
-    color: #1890ff; 
-    font-weight: bold;
-} */
 
 .ant-tabs-tab:hover {
     background-color: #e6f7ff; /* Ανοιχτό μπλε background στο hover */
@@ -146,9 +162,9 @@ font-weight:bold ;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   margin-top: 10%;
-  margin-left: 20%;
+ 
   width: 1300px;
-  height: 80%;
+  height: 90%;
   
 
 }
@@ -159,11 +175,20 @@ font-weight:bold ;
   
 }
 
+.h3{
+  font-size: 1.3em;
+  margin-left: 0.5%;
+  font-weight:bold;
+ margin-bottom: 2%;
+
+}
+
 .image-container {
   width: 100%; /* Ορίζουμε το πλάτος του container σε 100% */
   margin: 0; /* Εξασφαλίζουμε ότι δεν υπάρχουν περιθώρια */
   overflow: hidden; /* Εξασφαλίζουμε ότι δεν υπάρχει κανένα μέρος της εικόνας που να υπερχειλίζει */
   margin-bottom: 5%;
+ 
 }
 
 .image-container img {
@@ -171,10 +196,10 @@ font-weight:bold ;
   height: auto; /* Προσαρμόζουμε το ύψος της εικόνας ανάλογα για να διατηρηθούν οι αναλογίες της */
 }
 
-.usage-steps {
+/* .usage-steps {
   list-style-type: none;
   padding: 0;
-}
+} */
 
 .card {
   grid-row: 3; 
@@ -194,11 +219,73 @@ font-weight:bold ;
 }
 
 
-
 .oils-introduction-card{
   margin-right: 20%;
 }
 
+.faq-container-section{
+  margin-top: 5%;
+ 
+}
+
+.faq-container {
+  width: 1300px; /* ή ό,τι διάσταση προτιμάτε */
+  margin: auto;
+  padding: 2rem;
+  background: #fbf9ed !important; /* ή ό,τι χρώμα φόντου προτιμάτε */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.faq-container h2 {
+  font-size: 1.5rem;
+  color: #333; /* ή ό,τι χρώμα προτιμάτε */
+  margin-bottom: 1rem;
+}
+
+.faq-container p {
+  color: #666; /* ή ό,τι χρώμα προτιμάτε */
+  margin-bottom: 2rem;
+}
+
+.faq-container .ant-collapse {
+  background: none;
+  border: none;
+}
+
+.faq-container .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  padding: 1rem 1.5rem;
+  background: #fff; /* ή ό,τι χρώμα προτιμάτε */
+  border: 1px solid #e8e8e8;
+  border-radius: 8px;
+  font-size: 1rem;
+  color: #333; /* ή ό,τι χρώμα προτιμάτε */
+  box-shadow: 0 2px 3px #f0f1f2;
+}
+
+.faq-container .ant-collapse > .ant-collapse-item {
+  margin-bottom: 1rem;
+}
+
+.faq-container .ant-collapse > .ant-collapse-item:last-child {
+  margin-bottom: 0;
+}
+
+.faq-container button {
+  border: none;
+  outline: none;
+  background-color: black; /* ή ό,τι χρώμα προτιμάτε */
+  color: white;
+  padding: 10px 20px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.faq-container button:hover {
+  background-color: #333; /* ή ό,τι χρώμα προτιμάτε */
+}
 
 
 
@@ -223,6 +310,11 @@ font-weight:bold ;
   margin-top: 5%;
 }
 
+.product-description{
+  text-align: center;
+
+}
+
 
   .product-details {
     width: 100%;
@@ -241,18 +333,20 @@ font-weight:bold ;
     margin-top: 0.5%;
   
   }
-
-  .product-description {
-    font-size: 0.8em;
-    margin-left: 2%;
-  }
+ 
+  
 
   .product-price {
     font-size: 1.2em;
   }
 
   .add-to-cart-button {
-    padding: 8px 16px;
+    width: 50%;
+    margin-left: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .how-to-use-container {
@@ -272,6 +366,7 @@ font-weight:bold ;
 
   .how-to-use-container{
     margin-bottom: 5%;
+    display: block;
   }
 
   .image-container img {
@@ -284,9 +379,7 @@ font-weight:bold ;
     margin-bottom: 5px;
   }
 
-  .how-to-use-container {
-    display: block;
-  }
+  
 
   .ant-tabs-nav {
     padding: 8px;
@@ -295,6 +388,23 @@ font-weight:bold ;
 .ant-tabs-tab {
     padding: 8px; /* Μικρότερο padding για τα tabs σε μικρότερες συσκευές */
 }
+
+
+.faq-container-section{
+  margin-top: -5%;
+ 
+}
+
+.faq-container {
+  
+  width: 100%; /* ή ό,τι διάσταση προτιμάτε */
+  margin: auto;
+  padding: 2rem;
+  background: #fbf9ed !important; /* ή ό,τι χρώμα φόντου προτιμάτε */
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 
 }
 
